<resources>
    <string name="demo_app_name" translatable="false">Camment</string>

    <string name="facebook_app_id" translatable="false">272405646569362</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb272405646569362</string>

    <string name="shows">Shows</string>
    <string name="passcode">Passcode</string>
    <string name="passcode_hint">Enter passcode</string>
    <string name="no_network">Please check your internet connection</string>

    <string name="connecting">Connecting…</string>
    <string name="connected">Online</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="disconnected">Offline</string>

    <string name="empty_title">Welcome!</string>
    <string name="empty_msg">To get started open an INVITATION link from your friend or enter a PASSCODE</string>

    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>

    <string name="settings" translatable="false">Settings</string>
    <string name="camment_settings" translatable="false">Camment Settings</string>

    <string name="adjust_camment_volume" translatable="false">Adjust camment volume</string>
    <string name="key_adjust_camment_volume" translatable="false">key_adjust_camment_volume</string>
    <string name="full_adjustment" translatable="false">Full</string>
    <string name="mild_adjustment" translatable="false">Mild</string>
    <string name="no_adjustment" translatable="false">No</string>

    <string name="key_release_version" translatable="false">key_release_version</string>
    <string name="title_release_version" translatable="false">Release version</string>


</resources>
