<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_release_version">
        <Preference
            android:selectable="false"
            android:enabled="true"
            android:key="@string/key_release_version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/camment_settings">
        <ListPreference
            android:title="@string/adjust_camment_volume"
            android:key="@string/key_adjust_camment_volume"
            android:entries="@array/settings_camment_audio_entries"
            android:entryValues="@array/settings_camment_audio_values"
            android:dialogTitle="@string/adjust_camment_volume"/>

    </PreferenceCategory>
</PreferenceScreen>